--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jodicloud</groupId>
-  <artifactId>LetzRestWithJersey</artifactId>
-  <version>1.0</version>
-  <packaging>war</packaging>
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.jodicloud</groupId>
+	<artifactId>LetzRestWithJersey</artifactId>
+	<version>1.0</version>
+	<packaging>war</packaging>
+	<properties>
 		<activiti-version>5.11</activiti-version>
 	</properties>
 	<repositories>
@@ -48,7 +49,7 @@
 
 	</repositories>
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -75,7 +76,15 @@
 			<version>1.17</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
 
+			<groupId>com.sun.jersey.contribs</groupId>
+
+			<artifactId>jersey-apache-client</artifactId>
+
+			<version>1.17.1</version>
+
+		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
@@ -189,9 +198,9 @@
 				</configuration>
 			</plugin>
 
-	
+
 		</plugins>
 	</build>
 
-  
+
 </project>
